# voxel-research

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build_tsan.sh  performance_report.txt  performance_week13.txt
config/: default_params.ini  load_redistribution_balanced.ini  load_redistribution_conservative.ini  optimal_params.ini
docs/: 8_week_sprint_plan.md  8_week_sprint_plan_weeks_5_8.md  EXAMPLES.md  LOAD_REDISTRIBUTION_BENCHMARK.md  PARAMETER_TUNING_GUIDE.md  PHYSICS_API.md  PHYSX_INTEGRATION_GUIDE.md  QUICK_START.md  STATIC_COLLISION_PLAN.md  STRUCTURAL_ANALYZER_API.md  STRUCTURAL_MODES_PLAN.md  USAGE_GUIDE.md  WEEK4_SUMMARY.md  debris_voxel_collision_system.md  opengl_rendering_plan.md  track_1_structural_integrity_deep_dive.md  track_2_xcom_integration_deep_dive.md  track_3_physics_integration_deep_dive.md  week13_benchmark_analysis.md  week13_day45_summary.md  weeks_13_16_optimization_plan.md
examples/: analyzer_comparison.cpp  benchmark_structural_analysis.cpp  demo_integration.cpp  full_destruction_demo.cpp  performance_profiling.cpp  scenario_tests.cpp  showcase_demo.cpp  test_benchmark_simple.cpp  test_debris_collision.cpp  test_jobsystem_reinit.cpp  test_jobsystem_simple.cpp  week13_benchmark.cpp
include/: BulletEngine.h  Camera.h  ChunkCoord.h  ChunkedVoxelCollision.h  IPhysicsEngine.h  ImpactDetector.h  JobSystem.h  Material.h  MaxFlowStructuralAnalyzer.h  MockPhysicsEngine.h  ParameterTuning.h  ParticleSystem.h  PerformanceBenchmark.h  PhysXEngine.h  PhysicsProxySimulator.h  Renderer.h  RubbleSystem.h  SpatialHash.h  StructuralAnalyzer.h  ThreadSafeVector.h  TurnManager.h  Vector3.h  VisualFeedback.h  Voxel.h  VoxelCluster.h  VoxelClusterTracker.h  VoxelCollisionChunk.h  VoxelFragmentation.h  VoxelPhysicsIntegration.h  VoxelStability.h  VoxelUtils.h  VoxelWorld.h
scripts/: run_voxeldemo.bat  run_voxeldemo.ps1
src/: main.cpp
src/core/: JobSystem.cpp  Material.cpp  TurnManager.cpp  Vector3.cpp
src/physics/: BulletEngine.cpp  ChunkedVoxelCollision.cpp  ImpactDetector.cpp  PhysicsProxySimulator.cpp  RubbleSystem.cpp  VoxelCollisionChunk.cpp  VoxelPhysicsIntegration.cpp
src/rendering/: Camera.cpp  ParticleSystem.cpp  Renderer.cpp  VisualFeedback.cpp
src/structural/: MaxFlowStructuralAnalyzer.cpp  ParameterTuning.cpp  StructuralAnalyzer.cpp  VoxelFragmentation.cpp
src/testing/: PerformanceBenchmark.cpp  PerformanceBenchmark_old.cpp
src/voxel/: SpatialHash.cpp  VoxelCluster.cpp  VoxelClusterTracker.cpp  VoxelStability.cpp  VoxelUtils.cpp  VoxelWorld.cpp
tests/: test_Camera.cpp  test_FEMValidation.cpp  test_Integration.cpp  test_JobSystem.cpp  test_Material.cpp  test_MaxFlowStructuralAnalyzer.cpp  test_ParticleSystem.cpp  test_PhysicsEngine.cpp  test_RubbleSystem.cpp  test_SpatialHash.cpp  test_StructuralAnalyzer.cpp  test_ThreadSafeVector.cpp  test_Vector3.cpp  test_VoxelCluster.cpp  test_VoxelFragmentation.cpp  test_VoxelPhysicsIntegration.cpp  test_VoxelStability.cpp  test_VoxelUtils.cpp  test_VoxelWorld.cpp  test_VoxelWorldThreading.cpp  test_turn_manager.cpp  test_visual_feedback.cpp
validation/: ANALYZER_DIFFERENCES.md  MAXFLOW_VS_FEM.md  OPTIMIZATION_PLAN_SUMMARY.md  README.md  analyze_differences.py  fem_solver.py  generate_ground_truth.py  test_structures.py  visualize_connectivity.py
validation/results/: _summary.json  arch.json  bridge_single_support.json  bridge_supported.json  cantilever.json  cantilever_long.json  diagonal_braced_frame.json  heavy_load.json  l_shape.json  l_shape_damaged.json  multi_level_frame.json  multi_span_bridge.json  tower_grounded.json  tower_simple.json  two_towers.json
